# rates-webservice

./: .editorconfig  .env  .gitignore  README.md  pyproject.toml  start_service.sh
.github/workflows/: tests.yml
api/: __init__.py  routes.py  validators.py
api/services/: __init__.py  rates.py
assets/sql/: create_index.sql  get_average_daily_prices.sql  get_region_ports.sql  is_valid_port.sql  is_valid_region.sql
assets/static/: db_lifecycle.dot
assets/task_files/: Dockerfile  README.md  rates.sql  rates_optimised.sql
assets/useful_scripts/db_setup/: build_db_image.sh  destroy_everything.sh  start_or_make_db_container.sh  stop_db_container.sh
assets/useful_scripts/example_invocations/bad/: example_1_bad_date_from_1.sh  example_1_bad_date_from_2.sh  example_2_bad_origin_1.sh
assets/useful_scripts/example_invocations/good/: example_1_port_to_port.sh  example_2_port_to_region.sh  example_3_region_to_port.sh  example_4_region_to_region.sh
tests/: test_api.py  test_rates.py  test_routes.py  test_validators.py
